# pywf_open_source-project

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.rst  home_secret.json  home_secret_enum.py  poetry-lock-hash.json  pyproject.toml  release-history.rst  requirements-all.txt  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup_codecov_and_readthedocs.py  sync_cookiecutter_pywf_open_source_demo.py  why_pywf.rst
.github/workflows/: main.yml
cookiecutter_pywf_open_source_demo-project/: .coveragerc  .gitignore  pyproject.toml
cookiecutter_pywf_open_source_demo-project/docs/source/: conf.py
cookiecutter_pywf_open_source_demo-project/docs/source/api/cookiecutter_pywf_open_source_demo/: __init__.rst  api.rst
cookiecutter_pywf_open_source_demo-project/genai/: generate_knowledge_base.py  meta.json
cookiecutter_pywf_open_source_demo-project/tests/: all.py  test_api.py
docs/source/: conf.py
docs/source/01-How-to-Use/: how_to_use.py  index.rst
docs/source/01-Python-Wofklow-For-Open-Source-Projects/: how_to_use.py  index.rst
docs/source/02-Maintainer-Guide/: index.rst
docs/source/api/pywf_open_source/: __init__.rst  api.rst  define_03_deps.rst  define_04_tests.rst  define_08_saas.rst  helpers.rst
docs/source/cookiecutter_pywf_open_source_demo/: __init__.rst
docs/source/pywf_open_source/: __init__.rst  define.rst  define_01_paths.rst  define_02_venv.rst  define_05_docs.rst  define_06_build.rst  define_07_publish.rst  logger.rst
docs/staging/01-Poetry-Use-Test/: README.rst  script.py
docs/staging/01-Poetry-Use-Test/mypackage-project/: pyproject.toml
genai/: generate_knowledge_base.py  meta.json
pywf_open_source/: _version.py  define.py  define_01_paths.py  define_02_venv.py  define_03_deps.py  define_04_tests.py  define_05_docs.py  define_06_build.py  define_07_publish.py  define_08_saas.py  helpers.py
tests/: all.py  test_api.py  test_helpers.py  test_pywf.py
